# errorblob

./: .gitignore  LICENSE  README.md  errorblob-macos-arm64.spec  errorblob.spec  errorblob_entry.py  pyproject.toml
.github/workflows/: release.yml
homebrew/: errorblob-binary.rb  errorblob.rb
src/errorblob/: __init__.py  cli.py  config.py  models.py
src/errorblob/storage/: __init__.py  base.py  local.py  turbopuffer_backend.py
